# EnviroMetaAnalysis

./: .gitignore  OpenalexWOS.ipynb  README.md  docker-compose.yml
data/: DBLog.txt  Environmental_Science_and_technology_2023.tsv  Journal_List_Clarivate_Scopus_V1.xlsx  Journal_List_Clarivate_mv.xlsx  README.md  world bank GDP data.xls  world bank income division.xlsx  world bank income2.xlsx
docs/: README.md  arch_models.md
docs/NetworkAnalysis/: EnviroMetaAnalysis.md
src/: OpenalexWOS.ipynb  README.md  alex2mongo.py  alex2mongoV2.ipynb  alex2mongoV2.py  network_graph.py  openalexVisualizations_dev-GDP.ipynb  openalexVisualizations_dev.ipynb  pyproject.toml  test.py
src/dev/: First_author_ctry_corresponding_data.xlsx  Last_author_ctry_corresponding_data.xlsx  OpenalexMongoVisualizations.ipynb  README.md  Visualizations.ipynb  alex2mongoV2.ipynb  openalexVisualizations_dev-GDP.ipynb  test.gexf
src/gephi/: EnviroMetaAnalysis.gephi  country_graph-all-10000.gexf  country_graph-environment-10000.gexf  ig_graph-all-10000.gexf  ig_graph-environment-10000.gexf
src/plots/: avg_cites_per_coauthor_choropleth-all-10000.html  avg_cites_per_coauthor_choropleth-environment-10000.html  avg_cites_per_coauthor_ig-all-10000.html  avg_cites_per_coauthor_ig-environment-10000.html  cited_by_sum_choropleth-all-10000.html  cited_by_sum_choropleth-environment-10000.html  cited_by_sum_ig-all-10000.html  cited_by_sum_ig-environment-10000.html  coauthor_counts_ig-all-10000.html  coauthor_counts_ig-environment-10000.html
src/security/: README.md
src/test/: test.py
